<resources>
    <string name="app_name">ChatExample</string>
    <string name="login_entrer_email">Entrer email</string>
    <string name="login_entrer_password">Entrer password</string>
    <string name="login_reset_password">Reset password</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="save">Save</string>
    <string name="logout">LogOut</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">Change password</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_hav_account">Don\'t hav account :</string>
    <string name="sign_in_failed">Login failed with : %1$s</string>
    <string name="login_entrer_correct_email">enter correct email</string>
    <string name="login_password_mismatch">password mismatch</string>
    <string name="failed_signup">Sign Up failed : %1$s</string>
    <string name="nameUpdateFailed">Name update failed : %1$s</string>
    <!-- %1$s renvoie la première exception rencontrée -->
</resources>